--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -13,6 +13,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "arviz",
+    "bibat @ git+https://github.com/teddygroves/bibat#egg=copier",
     "cmdstanpy",
     "jupyter",
     "numpy",
