--- a/bibat/template/pyproject.toml.jinja
+++ b/bibat/template/pyproject.toml.jinja
@@ -35,6 +35,7 @@ dependencies = [
 dev = [
     "pytest",
     "black",
+    "ruff",
 ]
 
 [tool.setuptools]
@@ -64,16 +65,15 @@ exclude = '''
 )
 '''
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-line_length = 80
-
 [tool.pylint.messages_control]
 disable = "C0330, C0326"
 
 [tool.pylint.format]
 max-line-length = "80"
+
+[tool.ruff]
+line-length = 80
+[tool.ruff.lint]
+select = ["ALL"]
+[tool.ruff.lint.isort]
+known-first-party = ["bibat", "src"]
