Changes from going through vignette

--- a/bibat/template/{% if docs_format != 'None' %}docs{% endif %}/{% if docs_format == 'Quarto' %}report.qmd{% endif %}.jinja
+++ b/bibat/template/{% if docs_format != 'None' %}docs{% endif %}/{% if docs_format == 'Quarto' %}report.qmd{% endif %}.jinja
@@ -1,7 +1,7 @@
 ---
 title: "{{ project_name }}"
 resource_path: ["../"]
-subtitle: "A report created using bibat version {{ bibat_version }}"
+subtitle: "A report created using bibat version {{ _commit }}"
 author: "{{ author_name }}"
 bibliography: bibliography.bib
 reference-location: margin
