--- a/bibat/template/pyproject.toml.jinja
+++ b/bibat/template/pyproject.toml.jinja
@@ -73,3 +73,5 @@ line-length = 80
 select = ["ALL"]
 [tool.ruff.lint.isort]
 known-first-party = ["bibat", "src"]
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["INP001"]
