--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -20,6 +20,7 @@ dependencies = [
     "pandas",
     "pandera >= 0.18.0",
     "pydantic >= 2.0.0",
+    "scipy < 1.13",
     "toml",
     {%- if docs_format == 'Sphinx' %}
     "sphinx",
