--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -16,6 +16,7 @@ dependencies = [
     "bibat==0.3.4",
     "cmdstanpy",
     "jupyter",
+    "lovelyplots",
     "numpy",
     "pandas",
     "pandera >= 0.18.0",
